add eestia everywhere

--- a/pages/Eestia_menu.html
+++ b/pages/Eestia_menu.html
@@ -40,9 +40,9 @@
                   Catégories
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="./pages/1platsprincipaux.html">Lapinou ₍ᐢ. .ᐢ</a></li>
-                  <li><a class="dropdown-item" href="./pages/2desserts.html">Smily face ˶ᵔ ᵕ ᵔ˶</a></li>
-                  <li><a class="dropdown-item" href="./pages/3cocktails.html">Big eyes ◕⩊◕</a></li>
+                    <li><a class="dropdown-item" href="1platsprincipaux.html">Plats Principaux</a></li>
+                    <li><a class="dropdown-item" href="2desserts.html">Desserts</a></li>
+                    <li><a class="dropdown-item" href="3cocktails.html">Cocktails</a></li>
                 </ul>
               </li>
             </ul>
@@ -87,7 +87,6 @@
             <div class="card-body">
               <h5 class="card-title">Bento Sushi Kawaii</h5>
               <p class="card-text"> Des sushis trop mignons, décorés avec des petites faces adorables et des couleurs vives.</p>
-              <a href="1.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -95,7 +94,6 @@
             <div class="card-body">
               <h5 class="card-title">Tartines de fromage et légumes mignons</h5>
               <p class="card-text">Du pain garni de fromage et de légumes découpés en formes rigolotes.</p>
-              <a href="2.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -103,7 +101,6 @@
             <div class="card-body">
               <h5 class="card-title">Mini-brochettes de fruits kawaii</h5>
               <p class="card-text">Des fruits colorés en petites brochettes, souvent décorés avec des yeux en chocolat.</p>
-              <a href="3.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
     </section>
@@ -115,7 +112,6 @@
             <div class="card-body">
               <h5 class="card-title">Soupe miso en forme de lapin</h5>
               <p class="card-text">Une soupe miso classique avec du tofu et des algues, présentée avec un lapin dessiné dessus.</p>
-              <a href="4.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -123,7 +119,6 @@
             <div class="card-body">
               <h5 class="card-title">Salade de légumes en forme d'animaux</h5>
               <p class="card-text">Des légumes frais coupés et assemblés pour ressembler à des petits animaux adorables.</p>
-              <a href="5.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -131,7 +126,6 @@
             <div class="card-body">
               <h5 class="card-title">Gyoza kawaii</h5>
               <p class="card-text">De petits raviolis dorés avec des visages souriants dessinés à l'encre alimentaire.</p>
-              <a href="6.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
           </div>
@@ -144,7 +138,6 @@
             <div class="card-body">
               <h5 class="card-title">Bol de riz et curry en forme de panda</h5>
               <p class="card-text">Du riz blanc modelé en panda, avec du curry autour pour le contraste.</p>
-              <a href="7.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -152,7 +145,6 @@
             <div class="card-body">
               <h5 class="card-title">Spaghetti avec des boulettes en forme d'animaux</h5>
               <p class="card-text">Des boulettes de viande sculptées pour ressembler à des têtes d’animaux rigolos.</p>
-              <a href="8.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -160,7 +152,6 @@
             <div class="card-body">
               <h5 class="card-title">Bento Hello kitty</h5>
               <p class="card-text">Un bento décoré aux couleurs de Hello Kitty, avec du riz façonné en son visage.</p>
-              <a href="9.html" class="btn btn-primary">Aller vers la recette</a>
             </div>
           </div>
     </section>
