--- a/pages/p2-fondant.html
+++ b/pages/p2-fondant.html
@@ -32,6 +32,9 @@
             <li class="nav-item">
               <a class="nav-link" href="../index.html#titre-sections3">Nos cocktails</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Eestia_menu.html">Menu Eestia</a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Catégories
