--- a/pages/Eestia_menu.html
+++ b/pages/Eestia_menu.html
@@ -87,6 +87,20 @@
             <div class="card-body">
               <h5 class="card-title">Bento Sushi Kawaii</h5>
               <p class="card-text"> Des sushis trop mignons, décorés avec des petites faces adorables et des couleurs vives.</p>
+              <h4 id="ingrédient1">Ingrédients:</h4>
+              <ul>
+                  <li>Riz à sushi</li>
+                  <li>Nori(algue)</li>
+                  <li>Poisson cru(saumon,thon)</li>
+                  <li>Légumes(avocat,concombre)</li>
+              </ul>
+              <h4 id="recette1">Etape de préparation:</h4>
+              <ol>
+                  <li>Prépare le riz à sushi et laisse refroidir.</li>
+                  <li>Coupe les légumes et le poisson en tranches fines.</li>
+                  <li>Forme des petites boules ou des rectangles de riz.</li>
+                  <li>Ajoute des légumes et poissons pour créer un visuel mignon.</li>
+              </ol>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -94,6 +108,19 @@
             <div class="card-body">
               <h5 class="card-title">Tartines de fromage et légumes mignons</h5>
               <p class="card-text">Du pain garni de fromage et de légumes découpés en formes rigolotes.</p>
+              <ul>
+                <li>Pain de mie</li>
+                <li>Fromage (type cheddar ou fromage frais)</li>
+                <li>Légumes (tomates, concombre, poivrons)</li>
+                <li>Couteau pour découper en formes</li>
+            </ul>
+            <h4 id="recette2">Etape de préparation:</h4>
+            <ol>
+                <li>Toaste les tranches de pain.</li>
+                <li>Étale le fromage sur chaque tranche.</li>
+                <li>Découpe les légumes en formes d'animaux.</li>
+                <li>Dispose les légumes sur le fromage de façon artistique.</li>
+            </ol>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -101,6 +128,19 @@
             <div class="card-body">
               <h5 class="card-title">Mini-brochettes de fruits kawaii</h5>
               <p class="card-text">Des fruits colorés en petites brochettes, souvent décorés avec des yeux en chocolat.</p>
+              <h4 id="ingrédient3">Ingrédients:</h4>
+              <ul>
+                  <li>Fruits frais (fraises, raisins, kiwi, melon)</li>
+                  <li>Pics à brochettes</li>
+                  <li>Feutre alimentaire pour dessins (facultatif)</li>
+              </ul>
+              <h4 id="recette3">Etape de préparation:</h4>
+              <ol>
+                  <li>Coupe les fruits en morceaux égaux.</li>
+                  <li>Enfile les morceaux de fruits sur les pics.</li>
+                  <li>Décore les fruits avec un feutre alimentaire (facultatif).</li>
+                  <li>Servez les brochettes joliment disposées.</li>
+              </ol>
             </div>
           </div>
     </section>
@@ -112,6 +152,20 @@
             <div class="card-body">
               <h5 class="card-title">Soupe miso en forme de lapin</h5>
               <p class="card-text">Une soupe miso classique avec du tofu et des algues, présentée avec un lapin dessiné dessus.</p>
+              <h4 id="i4">Ingrédients:</h4>
+              <ul>
+                  <li>Soupe miso</li>
+                  <li>Tofu</li>
+                  <li>Légumes (oignons, algues)</li>
+                  <li>Découpoir en forme de lapin</li>
+              </ul>
+              <h4 id="r4">Etape de préparation:</h4>
+              <ol>
+                  <li>Prépare la soupe miso selon la recette classique.</li>
+                  <li>Coupe le tofu en petits morceaux, puis façonne-le en forme de lapin avec un découpoir.</li>
+                  <li>Ajoute le tofu dans la soupe chaude.</li>
+                  <li>Décore avec des légumes et des algues pour créer des détails.</li>
+              </ol>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -119,6 +173,20 @@
             <div class="card-body">
               <h5 class="card-title">Salade de légumes en forme d'animaux</h5>
               <p class="card-text">Des légumes frais coupés et assemblés pour ressembler à des petits animaux adorables.</p>
+              <h4>Ingrédients:</h4>
+          <ul>
+              <li>Légumes frais (concombre, carottes, tomates cerise)</li>
+              <li>Couteau pour découper en formes</li>
+              <li>Feuilles de salade</li>
+              <li>Vinaigrette</li>
+          </ul>
+          <h4 id="r5">Etape de préparation:</h4>
+          <ol>
+              <li>Coupe les légumes en tranches fines.</li>
+              <li>Utilise un couteau pour découper les légumes en formes d'animaux.</li>
+              <li>Mélange les légumes découpés avec de la salade.</li>
+              <li>Ajoute une vinaigrette légère pour assaisonner.</li>
+          </ol>       
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -126,6 +194,20 @@
             <div class="card-body">
               <h5 class="card-title">Gyoza kawaii</h5>
               <p class="card-text">De petits raviolis dorés avec des visages souriants dessinés à l'encre alimentaire.</p>
+              <h4 id="i6">Ingrédients:</h4>
+          <ul>
+              <li>Pâte à gyoza</li>
+              <li>Viande hachée (porc ou poulet)</li>
+              <li>Ciboulette, gingembre</li>
+              <li>Sauce soja</li>
+          </ul>
+          <h4 id="r6">Etape de préparation:</h4>
+          <ol>
+              <li>Mélange la viande hachée avec les épices et légumes.</li>
+              <li>Remplis les feuilles de pâte à gyoza avec la farce.</li>
+              <li>Plie les gyozas en forme de petits sachets ou animaux.</li>
+              <li>Fais cuire les gyozas à la vapeur ou à la poêle.</li>
+          </ol>      
             </div>
           </div>
           </div>
@@ -138,6 +220,19 @@
             <div class="card-body">
               <h5 class="card-title">Bol de riz et curry en forme de panda</h5>
               <p class="card-text">Du riz blanc modelé en panda, avec du curry autour pour le contraste.</p>
+              <ul>
+                <li>Riz à sushi</li>
+                <li>Curry japonais</li>
+                <li>Légumes (carottes, pommes de terre)</li>
+                <li>Algue nori (pour les détails du panda)</li>
+            </ul>
+            <h4 id="r7">Etape de préparation:</h4>
+            <ol>
+                <li>Cuis le riz à sushi et prépare le curry japonais.</li>
+                <li>Dispose le riz en forme de tête de panda dans un bol.</li>
+                <li>Ajoute le curry autour du riz pour former des contours.</li>
+                <li>Utilise nori pour créer les yeux et le nez du panda.</li>
+            </ol>          
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -145,6 +240,19 @@
             <div class="card-body">
               <h5 class="card-title">Spaghetti avec des boulettes en forme d'animaux</h5>
               <p class="card-text">Des boulettes de viande sculptées pour ressembler à des têtes d’animaux rigolos.</p>
+              <h4>Ingrédients:</h4>
+          <ul>
+              <li>Spaghetti</li>
+              <li>Viande hachée</li>
+              <li>Sauce tomate</li>
+              <li>Fromage râpé</li>
+          </ul>
+          <h4 id="r8">Etape de préparation:</h4>
+          <ol>
+              <li>Cuis les spaghetti.</li>
+              <li>Prépare les boulettes de viande et façonne-les en forme d'animaux.</li>
+              <li>Cuis les boulettes et mélange-les avec la sauce tomate.</li>
+              <li>Servez les pâtes avec les boulettes décorées.</li>
             </div>
           </div>
           <div class="card" style="width: 18rem;">
@@ -152,6 +260,19 @@
             <div class="card-body">
               <h5 class="card-title">Bento Hello kitty</h5>
               <p class="card-text">Un bento décoré aux couleurs de Hello Kitty, avec du riz façonné en son visage.</p>
+              <h4>Ingrédients:</h4>
+          <ul>
+              <li>Riz</li>
+              <li>Légumes (pois, carottes)</li>
+              <li>Poisson ou poulet</li>
+              <li>Nori (pour les détails)</li>
+          </ul>
+          <h4 id="r9">Etape de préparation:</h4>
+          <ol>
+              <li>Cuis le riz et forme-le en forme de tête de Hello Kitty.</li>
+              <li>Prépare les autres aliments (poisson, poulet, légumes).</li>
+              <li>Dispose les aliments dans le bento autour du riz.</li>
+              <li>Utilise des nori pour dessiner les détails du visage.</li>
             </div>
           </div>
     </section>
