--- a/pages/Eestia_menu.html
+++ b/pages/Eestia_menu.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#titre-sections3">Nos cocktails</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="Eestia_menu.html">Menu Eestia</a>
+                    <a class="nav-link" href="#">Menu Eestia</a>
                   </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
