--- a/pages/Eestia_menu.html
+++ b/pages/Eestia_menu.html
@@ -17,7 +17,7 @@
     <!-- Nav -->
     <nav id="nav" class="navbar sticky-top navbar-expand-lg bg-body-secondary shadow">
         <div class="container-fluid">
-          <a class="navbar-brand logo" href="#header-haut" id="logo">GARY</a>
+          <a class="navbar-brand logo" href="../index.html" id="logo">GARY</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
