add right button

--- a/pages/Eestia_menu.html
+++ b/pages/Eestia_menu.html
@@ -276,6 +276,9 @@
             </div>
           </div>
     </section>
+    <div class="d-grid gap-2">
+        <a href="https://eestia.github.io/Livre-de-recette/" class="btn btn-dark" disabled" tabindex="-1" role="button" aria-disabled="true">Site Eestia</a>
+      </div>
     <!-- Footer -->
     <!-- Footer -->
     <footer class="text-center text-lg-start bg-body-tertiary text-muted">
