--- a/pages/Eestia_menu.html
+++ b/pages/Eestia_menu.html
@@ -277,7 +277,7 @@
           </div>
     </section>
     <div class="d-grid gap-2">
-        <a href="https://eestia.github.io/Livre-de-recette/" class="btn btn-dark" disabled" tabindex="-1" role="button" aria-disabled="true">Site Eestia</a>
+        <a href="https://eestia.github.io/Livre-de-recette/" class="btn btn-dark" role="button" aria-disabled="true">Site Eestia</a>
       </div>
     <!-- Footer -->
     <!-- Footer -->
